--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,14 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "noImplicitAny": true,
-        "noImplicitThis": true,
-        "strictNullChecks": false,
-        "declaration": true,
-        "target": "es2019",
-        "lib": [
-            "es2019", "dom"
-        ],
-        "sourceMap": true,
-        "rootDir": "."
-    },
-    "exclude": [
-        "node_modules",
-        "test/node_modules"
-    ]
+  "compilerOptions": {
+    "module": "commonjs",
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": false,
+    "declaration": true,
+    "target": "es2019",
+    "lib": ["es2019", "dom"],
+    "sourceMap": true,
+    "rootDir": "."
+  },
+  "exclude": ["node_modules", "test/node_modules"]
 }
